quick z-index fix for xiNET controls

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@
     left: 0;
     right: 0;
     overflow:hidden;
-    /*z-index:-1;*/
+    z-index:0;
 }
 
 #main .mainContent {
